--- a/firmware/flash.cfg
+++ b/firmware/flash.cfg
@@ -12,6 +12,13 @@ halt
 flash probe 0
 stm32f1x unlock 0
 
+
+# # You may have to run these manually on protected devices
+# flash protect 0 0 last off
+# flash erase_sector 0 0 last
+# # Maybe even this.
+# stm32f1x mass_erase 0
+
 # report_flash_progress on
 
 echo Writing..
