Please read commit
I had to modify "TAP_SetInterface" to use a slightly different format so the firmware and host app must both be updated.
rp2040 is coming and stm32's weird dividers makes no sense there.

--- a/firmware/flash.cfg
+++ b/firmware/flash.cfg
@@ -1,17 +1,18 @@
 # Actual debug interface
 source [find interface/picoprobe.cfg]
+# source [find interface/cmsis-dap.cfg]
+
+transport select swd
+# transport select jtag
 
 # Target
 source [find target/stm32f1x.cfg]
-
-
 
 init
 halt
 
 flash probe 0
 stm32f1x unlock 0
-
 
 # # You may have to run these manually on protected devices
 # flash protect 0 0 last off
@@ -20,10 +21,8 @@ stm32f1x unlock 0
 # stm32f1x mass_erase 0
 
 # report_flash_progress on
-
 echo Writing..
-
-flash write_image erase bin/firmware.elf
+program bin/firmware.elf preverify verify
 
 reset
 
