--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 bin2header.exe
 
 # Only working on rp2040, requires a level shifter and only oldschool bdm is kinda working.
+# It'll be included once all three versions of BDM are working
 /firmware_mk2
 
 # There's a few "secret" projects in here that are not ready.
