Patched up some old junk
This never left the tool stage. It's kinda able to flash and dump from the command line but it's barely happening.

Should go over this eventually but right now I only did enough to make it run on windows and linux....

--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,9 @@ bin2header.exe
 /firmware_mk2
 
 # There's a few "secret" projects in here that are not ready.
-/host/cli/*
+/host/cli/junk*
+/host/cli/both/junk*
+/host/cli/shared/junk*
 /host/gui/linux
 /host/gui/nix/build*
 
