--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ bin2header.exe
 # Only working on rp2040, requires a level shifter and only oldschool bdm is kinda working.
 # It'll be included once all three versions of BDM are working
 /firmware_mk2
+/host_mk2
 
 # There's a few "secret" projects in here that are not ready.
 /host/cli/junk*
