--- a/host_mk2/core/targets/drivers/CPU32/trionic/makefile
+++ b/host_mk2/core/targets/drivers/CPU32/trionic/makefile
@@ -1,20 +1,31 @@
-CC  = m68k-elf-gcc
-AS  = m68k-elf-as
+NAME=txdriver
+
+CC=m68k-elf-gcc
+AS=m68k-elf-as
+SIZE=m68k-elf-size
+OBJCOPY=m68k-elf-objcopy
+
+ASFLAGS= -mcpu32 --register-prefix-optional
 
 .PHONY: all clean
 
-ASFLAGS = -mcpu32 --register-prefix-optional
-LDFLAGS = -mcpu32 -nostdlib -Wl,-s -Wl,-n -Tcfg.ld -Wl,-Map=$(basename $@).map
+all : $(NAME)
 
-all:  out/TxDriver.bin 
+OBJS=\
+	out/flash.o
 
 out/flash.o: flash.s
 	@$(AS) $(ASFLAGS)  $< -o $@
 	
-out/TxDriver.bin: out/flash.o
-	@$(CC) $(LDFLAGS) -o $@ out/flash.o
+$(NAME) : $(OBJS)
+	@$(CC) -o out/$(NAME).elf $^ -mcpu32 -nostdlib -Wl,-s -Wl,-n -Xlinker --gc-sections -Tlink.ld -Wl,-Map=out/$(basename $@).map
+	@$(OBJCOPY) -O binary out/$(NAME).elf out/$(NAME).bin
+	@$(OBJCOPY) -O ihex out/$(NAME).elf out/$(NAME).hex
+	@$(SIZE) -A out/$(NAME).elf
 
 clean:
-	@rm -f out/*.o
 	@rm -f out/*.bin
+	@rm -f out/*.hex
+	@rm -f out/*.elf
+	@rm -f out/*.o
 	@rm -f out/*.map
