firmware - makefile, workaround for a new cmd quirk
No new code. Just made sure it'll actually run the oocd command

--- a/firmware/makefile
+++ b/firmware/makefile
@@ -230,11 +230,11 @@ firmware : $(ALLOBJS)
 	@$(SIZE) -B bin/firmware.elf
 
 flash :
-	openocd -f flash.cfg
+	openocd -f "flash.cfg"
 
 startdebug :
 	@$(GDB)
-	openocd -f debug.cfg
+	openocd -f "debug.cfg"
 
 
 
