host2 - drivers, CPU32, CMFI
Still needs a lot of work and the host code is a ******* disaster.
Will push the rest once it's somewhat presentable

--- a/host_mk2/core/targets/drivers/CPU32/generic/makefile
+++ b/host_mk2/core/targets/drivers/CPU32/generic/makefile
@@ -6,11 +6,14 @@ all:
 	@echo " "
 	@$(MAKE) --no-print-directory -C flash/driver_16
 	@$(MAKE) --no-print-directory -C md5
+	@$(MAKE) --no-print-directory -C cmfi
 
 header: all
 	@./headertool flash/driver_16/out/driver_16bit.bin cpu32_flash16.h CPU32_flashdriver16
 	@./headertool md5/out/md5.bin cpu32_md5.h CPU32_md5
+	@./headertool cmfi/out/cpu32mcfi.bin cpu32_cmfi.h CPU32_cmfi
 
 clean:
 	@$(MAKE) --no-print-directory -C flash/driver_16 clean
 	@$(MAKE) --no-print-directory -C md5 clean
+	@$(MAKE) --no-print-directory -C cmfi clean
